infrastructure/network/security-groups.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: "Security Groups"

Parameters:

  StackName:
    Type: String
    Description: "Stack Name the Security Groups are added"

######################################################################
##### Security Groups
#######################################################################
Resources:

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow HTTP Inbound/Outbound in Public Subnet"
      GroupName: "Public Security Group"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: "Name"
          Value: !Join
            - ''
            - - !Ref StackName
              - '-public-security-group'
      VpcId:
        Fn::ImportValue:
          !Sub "${StackName}-VPCId"
  ApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow HTTP Inbound/Outbound in Application Private Subnet"
      GroupName: "Private Security Group"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0

      Tags:
        - Key: "Name"
          Value: !Join
          - ''
          - - !Ref StackName
            - '-private-security-group'
      VpcId:
        Fn::ImportValue:
          !Sub "${StackName}-VPCId"
  DataSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Allow PostgreSQL Inbound/Outbound Subnet"
      GroupName: "Database Security Group"
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: "Name"
          Value: !Join
          - ''
          - - !Ref StackName
            - '-data-security-group'
      VpcId:
        Fn::ImportValue:
          !Sub "${StackName}-VPCId"
